--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
 Source: keepalived
 Section: admin
-Priority: extra
-Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
-XSBC-Original-Maintainer: Alexander Wirt <formorer@debian.org>
+Priority: optional
+Maintainer: Alexander Wirt <formorer@debian.org>
 Build-Depends: autoconf,
-               debhelper (>= 9),
-               dh-systemd (>= 1.3),
+               debhelper-compat (=12),
+               libglib2.0-dev,
+               libjson-c-dev,
                libnl-3-dev,
                libnl-genl-3-dev,
                libpopt-dev,
@@ -13,23 +13,21 @@ Build-Depends: autoconf,
                libssl-dev,
                libnl-nf-3-dev,
                libnfnetlink-dev,
+	       libnftnl-dev,
                libipset-dev,
-               iptables-dev,
-               libnftnl-dev,
+	       libip4tc-dev,
                linux-libc-dev,
-               libsystemd-dev,
-               linux-headers-generic,
-               dh-autoreconf,
                pkg-config
-Standards-Version: 3.9.6
-Vcs-Browser: https://github.com/formorer/pkg-keepalived
-Vcs-Git: git://github.com/formorer/pkg-keepalived.git
+Standards-Version: 4.4.1
+Vcs-Browser: https://salsa.debian.org/ipvs-team/pkg-keepalived
+Vcs-Git: https://salsa.debian.org/ipvs-team/pkg-keepalived.git
 Homepage: http://keepalived.org
 
 Package: keepalived
 Section: admin
 Architecture: any
 Depends: iproute2, ${misc:Depends}, ${shlibs:Depends}
+Pre-Depends: ${misc:Pre-Depends}
 Recommends: ipvsadm
 Description: Failover and monitoring daemon for LVS clusters
  keepalived is used for monitoring real servers within a Linux
