--- a/debian/keepalived.service
+++ b/debian/keepalived.service
@@ -6,11 +6,10 @@ Wants=network-online.target
 ConditionFileNotEmpty=/etc/keepalived/keepalived.conf
 
 [Service]
-Type=forking
-KillMode=process
+Type=simple
 # Read configuration variable file if it is present
 EnvironmentFile=-/etc/default/keepalived
-ExecStart=/usr/sbin/keepalived $DAEMON_ARGS
+ExecStart=/usr/sbin/keepalived --dont-fork $DAEMON_ARGS
 ExecReload=/bin/kill -HUP $MAINPID
 
 [Install]
