--- a/debian/rules
+++ b/debian/rules
@@ -4,10 +4,10 @@
 #export DH_OPTIONS=-v
 
 %:
-	dh  $@ --with autoreconf --with=systemd
+	dh  $@ --with autoreconf
 
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-snmp --enable-sha1 --enable-snmp-rfcv2 --enable-snmp-rfcv3
+	dh_auto_configure -- --with-kernel-dir=debian/  --enable-snmp --enable-sha1 --enable-snmp-rfcv2 --enable-snmp-rfcv3 --enable-dbus --enable-json --enable-bfd --enable-regex
 
 
 override_dh_auto_install:
